[package]
name = "part01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bootloader = "0.9.23"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
panic-halt = "0.2.0"
spin = "0.9.5"
volatile = "0.4.6"
